--- a/lista.html
+++ b/lista.html
@@ -22,18 +22,20 @@
         <nav>
             <a title="Pagina principal" accesskey="P" tabindex="1" href="index.html">Pagina principal</a>
             <a title="Lista" tabindex="2" accesskey="V" href="lista.html">Patron VMC</a>
-            <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Caracteristicas generales</a>
+            <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Todas las versiones</a>
             <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
     
     <section>
-        <h2>Patron VMC</h2>
-        <p>Laravel propone en el desarrollo usar 'Routes with Closures', en lugar de un MVC tradicional con el objetivo
-            de hacer el código más claro. Aun así permite el uso de MVC tradicional.</p>
-        <audio controls>
-            <source src="multimedia/audio.mp3" type="audio/mp3">
-        </audio>
+        <section>
+            <h2>Patron VMC</h2>
+            <p>Laravel propone en el desarrollo usar 'Routes with Closures', en lugar de un MVC tradicional con el objetivo
+                de hacer el código más claro. Aun así permite el uso de MVC tradicional.</p>
+            <audio controls>
+                <source src="multimedia/audio.mp3" type="audio/mp3">
+            </audio>
+        </section>
         <dl>
             <dt>Modelo</dt>
             <dd>Laravel incluye un sistema de mapeo de datos relacional llamado Eloquent ORM que facilita la creación de
