--- a/tabla.html
+++ b/tabla.html
@@ -21,15 +21,15 @@
         <nav>
             <a title="Pagina principal" accesskey="P" tabindex="1" href="index.html">Pagina principal</a>
             <a title="Lista" tabindex="2" accesskey="V" href="lista.html">Patron VMC</a>
-            <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Caracteristicas generales</a>
+            <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Todas las versiones</a>
             <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
     
     <section>
-        <h2>Informacion general Laravel</h2>
+        <!--<h2>Informacion general Laravel</h2>-->
         <table>
-            <caption>Informacion general Laravel</caption>
+            <caption>Informacion general</caption>
             <tr>
                 <th>Tipo de programa</th>
                 <td>Framework</td>
@@ -53,7 +53,7 @@
         </table>
     </section>
     <section>
-        <h2>Un poco de cronología...</h2>
+        <!---<h2>Un poco de cronología...</h2>-->
         <table>
             <caption>Historia desde su lanzamiento</caption>
             <tr>
