--- a/formulario.html
+++ b/formulario.html
@@ -21,7 +21,7 @@
         <nav>
             <a title="Pagina principal" accesskey="P" tabindex="1" href="index.html">Pagina principal</a>
             <a title="Lista" tabindex="2" accesskey="V" href="lista.html">Patron VMC</a>
-            <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Caracteristicas generales</a>
+            <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Todas las versiones</a>
             <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
