--- a/formulario.html
+++ b/formulario.html
@@ -35,9 +35,9 @@
             <p><label for="web">Pagina web</label><input id="web" type="url"></p>
             <fieldset>
                 <legend>¿Te ha sido útil la informacion del sitio?</legend>
-                <input type="checkbox" value="Conforme">Conforme
-                <input type="checkbox" value="No conforme">No conforme
-                <input type="checkbox" value="Sin relevancia">Sin relevancia
+                <label><input type="checkbox" value="Conforme">Conforme</label> 
+                <label><input type="checkbox" value="No conforme">No conforme</label>
+                <label><input type="checkbox" value="Sin relevancia">Sin relevancia</label>
             </fieldset>
             <p><input type="submit" value="Enviar"></p>
         </form>
