--- a/lista.html
+++ b/lista.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     
-    <section>
+    <main>
         <section>
             <h2>Patron VMC</h2>
             <p>Laravel propone en el desarrollo usar 'Routes with Closures', en lugar de un MVC tradicional con el objetivo
@@ -56,7 +56,7 @@
                 Blade estos elementos incrustados se organizan en un solo archivo. Esta es una idea muy interesante de
                 Laravel que mejora la organización de las vistas y su rendimiento.</dd>
         </dl>
-    </section>
+    </main>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
     </footer>
