--- a/tabla.html
+++ b/tabla.html
@@ -25,9 +25,8 @@
             <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
-    
     <section>
-        <!--<h2>Informacion general Laravel</h2>-->
+        <h2>Informacion general Laravel</h2>
         <table>
             <caption>Informacion general</caption>
             <tr>
@@ -53,7 +52,7 @@
         </table>
     </section>
     <section>
-        <!---<h2>Un poco de cronología...</h2>-->
+        <h2>Un poco de cronología...</h2>
         <table>
             <caption>Historia desde su lanzamiento</caption>
             <tr>
