--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
-    <section>
+    <main>
         <section>
             <h2>Laravel con PHP</h2>
             <p><a href="https://laravel.com" title="Sitio oficial de Laravel">Laravel</a> es un framework de código abierto
@@ -47,14 +47,15 @@
                 términos MIT License.
             </p>
         </section>
-        <section>
-            <video width="100%" height="100%" controls>
+        <aside>
+            <video  controls>
                 <source src="multimedia/video_Trim_Trim.mp4" type="video/mp4">
             </video>
-        </section>
-    </section>
+        </aside>
+    </main>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
     </footer>
 </body>
+
 </html>
