--- a/tabla.html
+++ b/tabla.html
@@ -11,7 +11,8 @@
     <meta name="keywords" content="tabla,tabular,indice">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="estilo/trabajo.css">
+        <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+        <link rel="stylesheet" type="text/css" href="estilo/layout.css">
 </head>
 
 <body>
