--- a/tabla.html
+++ b/tabla.html
@@ -146,7 +146,7 @@
     </section>
     <!--establecer el ancho y alto de las imagenes, debe estar en css aqui no debe porque es el estilo
     o tambien se puede cambiar a traves de un editor reduciendo su tamaño-->
-    <img src="multimedia/laravelmeeting.png" alt="Reunion de trabajo" width="600" height="300">
+    <img src="multimedia/laravelmeeting.png" alt="Reunion de trabajo">
 
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
