--- a/formulario.html
+++ b/formulario.html
@@ -20,20 +20,20 @@
     <header>
         <h1>Laravel</h1>
         <nav>
-            <a title="Pagina principal" accesskey="P" tabindex="1" href="index.html">Pagina principal</a>
+            <a title="Pagina principal" accesskey="A" tabindex="1" href="index.html">Pagina principal</a>
             <a title="Lista" tabindex="2" accesskey="V" href="lista.html">Patron VMC</a>
             <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Todas las versiones</a>
-            <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
+            <a title="Formulario" tabindex="4" accesskey="O" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
-    <section>
+    <article>
         <h2>Formulario del sitio</h2>
         <p>Por favor rellene el siguiente formulario correspondiente a la pagina web para recibir un feedback.</p>
         <form name="datos">
-            <p><label for="mail">Email</label><input id="mail" type="email"></p>
-            <p><label for="name">Nombre</label><input id="name" type="text"></p>
-            <p><label for="date">Fecha</label><input id="date" type="date"></p>
-            <p><label for="web">Pagina web</label><input id="web" type="url"></p>
+            <p><label for="mail">Email: </label><input id="mail" type="email"></p>
+            <p><label for="name">Nombre: </label><input id="name" type="text"></p>
+            <p><label for="date">Fecha: </label><input id="date" type="date"></p>
+            <p><label for="web">Pagina web: </label><input id="web" type="url"></p>
             <fieldset>
                 <legend>¿Te ha sido útil la informacion del sitio?</legend>
                 <label><input type="checkbox" value="Conforme">Conforme</label> 
@@ -42,9 +42,10 @@
             </fieldset>
             <p><input type="submit" value="Enviar"></p>
         </form>
-    </section>
+    </article>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
+        <address>Mas informacion pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
     </footer>
 
 </body>
