--- a/lista.html
+++ b/lista.html
@@ -21,10 +21,10 @@
     <header>
         <h1>Laravel</h1>
         <nav>
-            <a title="Pagina principal" accesskey="P" tabindex="1" href="index.html">Pagina principal</a>
+            <a title="Pagina principal" accesskey="A" tabindex="1" href="index.html">Pagina principal</a>
             <a title="Lista" tabindex="2" accesskey="V" href="lista.html">Patron VMC</a>
             <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Todas las versiones</a>
-            <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
+            <a title="Formulario" tabindex="4" accesskey="O" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
     
@@ -60,6 +60,7 @@
     </main>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
+        <address>Mas informacion pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
     </footer>
 </body>
 
