--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <header>
         <h1>Laravel</h1>
         <nav>
-            <a title="Pagina principal" accesskey="P" tabindex="1" href="index.html">Pagina principal</a>
+            <a title="Pagina principal" accesskey="A" tabindex="1" href="index.html">Pagina principal</a>
             <a title="Lista" tabindex="2" accesskey="V" href="lista.html">Patron VMC</a>
             <a title="Tabla" tabindex="3" accesskey="C" href="tabla.html">Todas las versiones</a>
-            <a title="Formulario" tabindex="4" accesskey="F" href="formulario.html">Formulario para lectores</a>
+            <a title="Formulario" tabindex="4" accesskey="O" href="formulario.html">Formulario para lectores</a>
         </nav>
     </header>
     <main>
@@ -48,14 +48,15 @@
                 términos MIT License.
             </p>
         </section>
-        <aside>
+        <section>
             <video  controls>
                 <source src="multimedia/video_Trim_Trim.mp4" type="video/mp4">
             </video>
-        </aside>
+        </section>
     </main>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
+        <address>Mas informacion pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
     </footer>
 </body>
 
