--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 elegante y simple, evitando el "código espagueti". Fue creado en 2011 por Taylor Otwell y tiene una gran
                 influencia de
                 frameworks como Ruby on Rails, Sinatra y ASP.NET MVC. </p>
+            
         </section>
         <section>
             <h2>Vision general</h2>
@@ -48,11 +49,12 @@
                 términos MIT License.
             </p>
         </section>
-        <section>
+        <aside>
             <video  controls>
                 <source src="multimedia/video_Trim_Trim.mp4" type="video/mp4">
             </video>
-        </section>
+        </aside>
+
     </main>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
