--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </main>
     <footer>
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
-        <address>Mas informacion pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
+        <address>Para mas informacion personalizada pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
     </footer>
 </body>
 
