--- a/formulario.html
+++ b/formulario.html
@@ -36,9 +36,9 @@
             <p><label for="web">Pagina web: </label><input id="web" type="url"></p>
             <fieldset>
                 <legend>¿Te ha sido útil la informacion del sitio?</legend>
-                <label><input type="checkbox" value="Conforme">Conforme</label> 
-                <label><input type="checkbox" value="No conforme">No conforme</label>
-                <label><input type="checkbox" value="Sin relevancia">Sin relevancia</label>
+                <label for="idConforme"><input id = "idConforme" type="checkbox" value="Conforme">Conforme</label> 
+                <label for ="idNoConforme"><input id="idNoConforme" type="checkbox" value="No conforme">No conforme</label>
+                <label for="idSinRelevancia"><input id="idSinRelevancia" type="checkbox" value="Sin relevancia">Sin relevancia</label>
             </fieldset>
             <p><input type="submit" value="Enviar"></p>
         </form>
