--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 aplicación web con una sintaxis expresiva y elegante. Algunas caracteristicas de Laravel es que tiene un
                 sistema de paquetes modular con un administrador de dependencia dedicado, distintas maneras de acceder a
                 bases de datos relacionales. El codigo fuente de Laravel podemos encontrarlo en <a
-                    href="https://en.wikipedia.org/wiki/GitHub" title="Sitio a github wikipedia">GitHub</a> y bajo los
-                términos MIT License.
+                    href="https://en.wikipedia.org/wiki/GitHub" title="Sitio a github wikipedia">GitHub</a> y bajo los términos MIT License.
+                    Como framework resulta bastante moderno y ofrece muchas utilidades potentes a los desarrolladores, que permiten agilizar el desarrollo las aplicaciones web.Laravel pone énfasis en la calidad del código, la facilidad de mantenimiento y escalabilidad, lo que permite realizar proyectos desde pequeños a grandes o muy grandes. Además permite y facilita el trabajo en equipo y promueve las mejores prácticas.
             </p>
         </section>
         <aside>
