--- a/lista.html
+++ b/lista.html
@@ -32,7 +32,8 @@
         <section>
             <h2>Patron VMC</h2>
             <p>Laravel propone en el desarrollo usar 'Routes with Closures', en lugar de un MVC tradicional con el objetivo
-                de hacer el código más claro. Aun así permite el uso de MVC tradicional.</p>
+                de hacer el código más claro. Aun así permite el uso de MVC tradicional.MVC (Modelo-Vista-Controlador) es un patrón en el diseño de software comúnmente utilizado para implementar interfaces de usuario, datos y lógica de control.
+                Enfatiza una separación entre la lógica de negocios y su visualización. Esta "separación de preocupaciones" proporciona una mejor división del trabajo y una mejora de mantenimiento. Algunos otros patrones de diseño se basan en MVC, como MVVM (Modelo-Vista-modelo de vista), MVP (Modelo-Vista-Presentador) y MVW (Modelo-Vista-Whatever).</p>
             <audio controls>
                 <source src="multimedia/audio.mp3" type="audio/mp3">
             </audio>
