--- a/Ejercicio-07/arboldom.html
+++ b/Ejercicio-07/arboldom.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="es"><head>
+<!DOCTYPE HTML><html lang="es"><head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
     <title>LARAVEL</title>
@@ -37,31 +36,31 @@
                 <input type="button" value="Mostrar texto" onclick="editor.mostrarP()">
                 <input type="button" value="Modificar texto" onclick="editor.modificarP()">
                 <table>
-                    <caption>Informacion general</caption>
                     <tbody><tr>
-                        <td scope="col" id="programa" headers="programa">Tipo de programa</td>
-                        <td headers="programa">Framework</td>
+                        <td>Tipo de programa</td>
+                        <td>Framework</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="desarrollador" headers="desarrollador">Desarrollador</td>
-                        <td headers="desarrollador">Taylor Ottwell</td>
+                        <td>Desarrollador</td>
+                        <td>Taylor Ottwell</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="modelo" headers="modelo">Modelo de desarrollo</td>
-                        <td headers="modelo">Código abierto</td>
+                        <td>Modelo de desarrollo</td>
+                        <td>Código abierto</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="lanzamiento" headers="lanzamiento">Lanzamiento inicial</td>
-                        <td headers="lanzamiento">9 de junio de 2011</td>
+                        <td>Lanzamiento inicial</td>
+                        <td>9 de junio de 2011</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="enlace" headers="enlace">Enlace</td>
-                        <td headers="enlace"><a href="https://laravel.com" title="Enlace al sitio web oficial">Sitio web oficial</a></td>
+                        <td>Enlace</td>
+                        <td><a href="https://laravel.com" title="Enlace al sitio web oficial">Sitio web oficial</a></td>
                     </tr>
                 </tbody></table>
                 <input type="button" value="Modificar lista" onclick="editor.modicicaLista()">
                 <input type="button" value="Calcular tamaño" onclick="editor.sumarFilasYColumnas()">
-                <label for="idcalculo"><input type="text" id="idcalculo" disabled="disabled"></label>
+                <label for="idcalculo">Calculo de filas y columnas</label>
+                <input type="text" id="idcalculo" disabled="disabled">
                 <input type="button" value="Ver arbol" onclick="editor.recorrerArbol()">
         </section>
         <section>
@@ -75,7 +74,7 @@
                 bases de datos relacionales. El codigo fuente de Laravel podemos encontrarlo en <a href="https://en.wikipedia.org/wiki/GitHub" title="Sitio a github wikipedia">GitHub</a> y bajo los términos MIT License.
                     Como framework resulta bastante moderno y ofrece muchas utilidades potentes a los desarrolladores, que permiten agilizar el desarrollo las aplicaciones web.Laravel pone énfasis en la calidad del código, la facilidad de mantenimiento y escalabilidad, lo que permite realizar proyectos desde pequeños a grandes o muy grandes. Además permite y facilita el trabajo en equipo y promueve las mejores prácticas.
             </p>
-        <h2>Recorrido del arbol</h2><ul><li> Elemento: HEADER Etiqueta padre: BODY</li><li> Elemento: H1 Etiqueta padre: HEADER</li><li> Elemento: NAV Etiqueta padre: HEADER</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: MAIN Etiqueta padre: BODY</li><li> Elemento: SECTION Etiqueta padre: MAIN</li><li> Elemento: H2 Etiqueta padre: SECTION</li><li> Elemento: P Etiqueta padre: SECTION</li><li> Elemento: A Etiqueta padre: P</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: TABLE Etiqueta padre: SECTION</li><li> Elemento: CAPTION Etiqueta padre: TABLE</li><li> Elemento: TBODY Etiqueta padre: TABLE</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: A Etiqueta padre: TD</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: LABEL Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: LABEL</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: SECTION Etiqueta padre: MAIN</li><li> Elemento: H2 Etiqueta padre: SECTION</li><li> Elemento: P Etiqueta padre: SECTION</li><li> Elemento: A Etiqueta padre: P</li><li> Elemento: ASIDE Etiqueta padre: MAIN</li><li> Elemento: VIDEO Etiqueta padre: ASIDE</li><li> Elemento: SOURCE Etiqueta padre: VIDEO</li><li> Elemento: FOOTER Etiqueta padre: BODY</li><li> Elemento: IMG Etiqueta padre: FOOTER</li><li> Elemento: ADDRESS Etiqueta padre: FOOTER</li><li> Elemento: A Etiqueta padre: ADDRESS</li></ul></section>
+        <h2>Recorrido del arbol</h2><ul><li> Elemento: HEADER Etiqueta padre: BODY</li><li> Elemento: H1 Etiqueta padre: HEADER</li><li> Elemento: NAV Etiqueta padre: HEADER</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: A Etiqueta padre: NAV</li><li> Elemento: MAIN Etiqueta padre: BODY</li><li> Elemento: SECTION Etiqueta padre: MAIN</li><li> Elemento: H2 Etiqueta padre: SECTION</li><li> Elemento: P Etiqueta padre: SECTION</li><li> Elemento: A Etiqueta padre: P</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: TABLE Etiqueta padre: SECTION</li><li> Elemento: TBODY Etiqueta padre: TABLE</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TR Etiqueta padre: TBODY</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: TD Etiqueta padre: TR</li><li> Elemento: A Etiqueta padre: TD</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: LABEL Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: INPUT Etiqueta padre: SECTION</li><li> Elemento: SECTION Etiqueta padre: MAIN</li><li> Elemento: H2 Etiqueta padre: SECTION</li><li> Elemento: P Etiqueta padre: SECTION</li><li> Elemento: A Etiqueta padre: P</li><li> Elemento: ASIDE Etiqueta padre: MAIN</li><li> Elemento: VIDEO Etiqueta padre: ASIDE</li><li> Elemento: SOURCE Etiqueta padre: VIDEO</li><li> Elemento: FOOTER Etiqueta padre: BODY</li><li> Elemento: IMG Etiqueta padre: FOOTER</li><li> Elemento: ADDRESS Etiqueta padre: FOOTER</li><li> Elemento: A Etiqueta padre: ADDRESS</li></ul></section>
         <aside>
             <video controls="">
                 <source src="multimedia/video_Trim_Trim.mp4" type="video/mp4">
