--- a/Ejercicio-07/mostrarTexto.html
+++ b/Ejercicio-07/mostrarTexto.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="es">
-<head>
+<html lang="es"><head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
     <title>LARAVEL</title>
@@ -29,7 +28,7 @@
     <main>
         <section>
             <h2>Laravel con PHP</h2>
-            <p><a href="https://laravel.com" title="Sitio oficial de Laravel">Laravel</a> es un framework de código abierto
+            <p style=""><a href="https://laravel.com" title="Sitio oficial de Laravel">Laravel</a> es un framework de código abierto
                 para desarrollar aplicaciones y servicios web con PHP 5, PHP 7 y PHP 8. Desarrollan código PHP de forma
                 elegante y simple, evitando el "código espagueti". Fue creado en 2011 por Taylor Otwell y tiene una gran
                 influencia de
@@ -38,7 +37,7 @@
                 <input type="button" value="Mostrar texto" onclick="editor.mostrarP()">
                 <input type="button" value="Modificar texto" onclick="editor.modificarP()">
                 <table>
-                    <tr>
+                    <tbody><tr>
                         <td>Tipo de programa</td>
                         <td>Framework</td>
                     </tr>
@@ -58,11 +57,11 @@
                         <td>Enlace</td>
                         <td><a href="https://laravel.com" title="Enlace al sitio web oficial">Sitio web oficial</a></td>
                     </tr>
-                </table>
+                </tbody></table>
                 <input type="button" value="Modificar lista" onclick="editor.modicicaLista()">
                 <input type="button" value="Calcular tamaño" onclick="editor.sumarFilasYColumnas()">
                 <label for="idcalculo">Calculo de filas y columnas</label>
-                <input type="text" id="idcalculo" disabled ="disabled">
+                <input type="text" id="idcalculo" disabled="disabled">
                 <input type="button" value="Ver arbol" onclick="editor.recorrerArbol()">
         </section>
         <section>
@@ -73,13 +72,12 @@
                 frameworks y aprovechar las características de las últimas versiones de PHP. Laravel es un marco de
                 aplicación web con una sintaxis expresiva y elegante. Algunas caracteristicas de Laravel es que tiene un
                 sistema de paquetes modular con un administrador de dependencia dedicado, distintas maneras de acceder a
-                bases de datos relacionales. El codigo fuente de Laravel podemos encontrarlo en <a
-                    href="https://en.wikipedia.org/wiki/GitHub" title="Sitio a github wikipedia">GitHub</a> y bajo los términos MIT License.
+                bases de datos relacionales. El codigo fuente de Laravel podemos encontrarlo en <a href="https://en.wikipedia.org/wiki/GitHub" title="Sitio a github wikipedia">GitHub</a> y bajo los términos MIT License.
                     Como framework resulta bastante moderno y ofrece muchas utilidades potentes a los desarrolladores, que permiten agilizar el desarrollo las aplicaciones web.Laravel pone énfasis en la calidad del código, la facilidad de mantenimiento y escalabilidad, lo que permite realizar proyectos desde pequeños a grandes o muy grandes. Además permite y facilita el trabajo en equipo y promueve las mejores prácticas.
             </p>
         </section>
         <aside>
-            <video  controls>
+            <video controls="">
                 <source src="multimedia/video_Trim_Trim.mp4" type="video/mp4">
             </video>
         </aside>
@@ -89,6 +87,6 @@
         <img src="multimedia/laravelsocials.png" alt="Redes sociales">
         <address>Para mas informacion personalizada pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
     </footer>
-</body>
 
-</html>
+
+</body></html>
