--- a/Ejercicio-07/ocultarTexto.html
+++ b/Ejercicio-07/ocultarTexto.html
@@ -37,31 +37,31 @@
                 <input type="button" value="Mostrar texto" onclick="editor.mostrarP()">
                 <input type="button" value="Modificar texto" onclick="editor.modificarP()">
                 <table>
-                    <caption>Informacion general</caption>
                     <tbody><tr>
-                        <td scope="col" id="programa" headers="programa">Tipo de programa</td>
-                        <td headers="programa">Framework</td>
+                        <td>Tipo de programa</td>
+                        <td>Framework</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="desarrollador" headers="desarrollador">Desarrollador</td>
-                        <td headers="desarrollador">Taylor Ottwell</td>
+                        <td>Desarrollador</td>
+                        <td>Taylor Ottwell</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="modelo" headers="modelo">Modelo de desarrollo</td>
-                        <td headers="modelo">Código abierto</td>
+                        <td>Modelo de desarrollo</td>
+                        <td>Código abierto</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="lanzamiento" headers="lanzamiento">Lanzamiento inicial</td>
-                        <td headers="lanzamiento">9 de junio de 2011</td>
+                        <td>Lanzamiento inicial</td>
+                        <td>9 de junio de 2011</td>
                     </tr>
                     <tr>
-                        <td scope="col" id="enlace" headers="enlace">Enlace</td>
-                        <td headers="enlace"><a href="https://laravel.com" title="Enlace al sitio web oficial">Sitio web oficial</a></td>
+                        <td>Enlace</td>
+                        <td><a href="https://laravel.com" title="Enlace al sitio web oficial">Sitio web oficial</a></td>
                     </tr>
                 </tbody></table>
                 <input type="button" value="Modificar lista" onclick="editor.modicicaLista()">
                 <input type="button" value="Calcular tamaño" onclick="editor.sumarFilasYColumnas()">
-                <label for="idcalculo"><input type="text" id="idcalculo" disabled="disabled"></label>
+                <label for="idcalculo">Calculo de filas y columnas</label>
+                <input type="text" id="idcalculo" disabled="disabled">
                 <input type="button" value="Ver arbol" onclick="editor.recorrerArbol()">
         </section>
         <section>
