--- a/Ejercicio-09/Ejercicio9.html
+++ b/Ejercicio-09/Ejercicio9.html
@@ -4,14 +4,14 @@
 
 <head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>METEREOLOGIA</title>
-    <meta name="author" content="Sergio Buenaga Gutierrez"/>
-    <meta name="description" content="Hablaremos sobre Laravel, un framework de codigo abierto para desarrollar en PHP"/>
-    <meta name="keywords" content="Laravel,PHP,framework,codigo abierto"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Sergio Buenaga Gutierrez">
+    <meta name="description" content="Hablaremos sobre Laravel, un framework de codigo abierto para desarrollar en PHP">
+    <meta name="keywords" content="Laravel,PHP,framework,codigo abierto">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="Ejercicio9.css"/>
+    <link rel="stylesheet" type="text/css" href="Ejercicio9.css">
     <script src="Ejercicio9.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>var meteo = new Meteo()</script>
@@ -50,10 +50,6 @@
             <p>Se procedera a mostrar la informacion climatica de Paris actualmente.</p>
         </section>
     </main>
-    <footer>
-        <img src="multimedia/laravelsocials.png" alt="Redes sociales"/>
-        <address>Para mas informacion personalizada pincha <a href="mailto:UO271572@uniovi.es">aquí</a>.</address>
-    </footer>
 </body>
 
 </html>
