--- a/Ejercicio-10/Ejercicio10.html
+++ b/Ejercicio-10/Ejercicio10.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <!-- Datos que describen el documento -->
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>Gas Natural</title>
-    <meta name="author" content="Sergio Buenaga Gutierrez"/>
-    <meta name="description" content="Hablaremos sobre Laravel, un framework de codigo abierto para desarrollar en PHP"/>
-    <meta name="keywords" content="Laravel,PHP,framework,codigo abierto"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Sergio Buenaga Gutierrez">
+    <meta name="description" content="Gas natural">
+    <meta name="keywords" content="Gas natural">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel="stylesheet" type="text/css" href="Ejercicio10.css"/>
+    <link rel="stylesheet" type="text/css" href="Ejercicio10.css">
     <script src="Ejercicio10.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>var trader = new Trader()</script>
@@ -30,7 +30,7 @@
             <select name="moneda" id="moneda">
             </select>
             <input type="button" name="Buscar" onclick="trader.buscar()" value="Buscar">
-            <article></article>
+            <article><h2>Informacion adicional:</h2></article>
         </section>
     </main>
 </body>
