--- a/Ejercicio-10/Ejercicio101.html
+++ b/Ejercicio-10/Ejercicio101.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="es"><head>
+<!DOCTYPE HTML><html lang="es"><head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8">
     <title>Gas Natural</title>
@@ -23,11 +22,10 @@
         <section>
             <h2>NATURAL GAS</h2>
             <p>A continuacion se mostrara el precio del gas natural convertido a la unidad monetaria EUR(comparandola antes con el tipo de moneda que seleccionará a continuacion), para ello debe seleccionar la unidad monetaria y muestra la fecha en la que se produjo la actualizacion.</p>
-            <label for="moneda">Selecciona la cantidad</label>
-            <input type="number" min="1" value="1">
+            <label for="cantidad">Selecciona la cantidad</label>
+            <input type="number" id="cantidad" min="1" value="1">
             <label for="moneda">Selecciona la moneda/tipo para calcular el importe final</label>
-            <select name="moneda" id="moneda">
-            <option value="ADA">ADA</option>
+            <select name="moneda" id="moneda"><option value="ADA">ADA</option>
 <option value="AED">AED</option>
 <option value="AFN">AFN</option>
 <option value="ALL">ALL</option>
@@ -256,7 +254,7 @@
 <option value="ZWU2">ZWU2</option>
 </select>
             <input type="button" name="Buscar" onclick="trader.buscar()" value="Buscar">
-            <article><h2>Informacion adicional:</h2><p>Fecha: 2022-12-07 Precio en euros: 0.30357197363514826</p></article>
+            <article><h2>Informacion adicional:</h2><p>Fecha: 2022-12-07 Precio en euros: 0.01083946078510637</p></article>
         </section>
     </main>
 
