--- a/Ejercicio-11/Tarea-2/Ejercicio11.html
+++ b/Ejercicio-11/Tarea-2/Ejercicio11.html
@@ -1,18 +1,19 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8"/>
-<meta name="author" content="Sergio Buenaga Gutierrez" />
-<meta name="description" content="Manejo de los errores de la API de geolocalizacion"/>
-<meta name="keywords" content="errores geolocalizacion" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="author" content="Sergio Buenaga Gutierrez" >
+<meta name="description" content="Manejo de los errores de la API de geolocalizacion">
+<meta name="keywords" content="errores geolocalizacion" >
+<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 <title>Errores Geolocalizacion</title>
-<link rel="stylesheet" href="Ejercicio11.css" />
+<link rel="stylesheet" href="Ejercicio11.css" >
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src = "Ejercicio11.js"></script>
 </head>
 <body>
 <h1>Geolocalizacion</h1>
-<section></section>
-<input type="button" Value="Obtener Posicion" onclick="posicion.verPosicion();"/>  
+<section><h2>Localizacion</h2></section>
+<input type="button" Value="Obtener Posicion" onclick="posicion.verPosicion();">  
 </body>
 </html>
