--- a/Ejercicio-11/Tarea-3/Ejercicio11.html
+++ b/Ejercicio-11/Tarea-3/Ejercicio11.html
@@ -1,18 +1,19 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Mapa estatico" />
-    <meta name="keywords" content="geolocalizacion" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Mapa estatico" >
+    <meta name="keywords" content="geolocalizacion" >
     <title>Mapa estatico</title>
-    <link href="Ejercicio11.css" rel="stylesheet"/>
+    <link href="Ejercicio11.css" rel="stylesheet">
     <script src="Ejercicio11.js"></script>
 </head>
 <body>
     <h1>Mapa Estatico</h1>
     <section>
-        <input type="button" value="Obtener mis Coordenadas" onClick = "miPosicion.getMapaEstaticoGoogle('ubicacion')"/>
+		<h2>Mapa</h2>
+        <input type="button" value="Obtener mis Coordenadas" onClick = "miPosicion.getMapaEstaticoGoogle('ubicacion')">
     </section>
 </body>
 </html>
