--- a/Ejercicio-11/Tarea-3/Ejercicio111.html
+++ b/Ejercicio-11/Tarea-3/Ejercicio111.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="es"><head>
+<!DOCTYPE html><html lang="es"><head>
     <meta charset="UTF-8">
     <meta name="author" content="Sergio Buenaga Gutierrez">
     <meta name="description" content="Mapa estatico">
@@ -10,6 +9,6 @@
 </head>
 <body>
     <h1>Mapa Estatico</h1>
-    <section><h2>Mapa</h2><img src="https://maps.googleapis.com/maps/api/staticmap?center=43.3848295,-5.803754&amp;zoom=10&amp;size=800x600&amp;mapTypeID=satellite&amp;markers=color:blue%7Clabel:S%7C43.3848295,-5.803754&amp;sensor=false&amp;key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU"></section>
+    <section><h2>Mapa</h2><img alt="a" src="https://maps.googleapis.com/maps/api/staticmap?center=43.3848295,-5.803754&amp;zoom=10&amp;size=800x600&amp;mapTypeID=satellite&amp;markers=color:blue%7Clabel:S%7C43.3848295,-5.803754&amp;sensor=false&amp;key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU"></section>
 
 </body></html>
