--- a/Ejercicio-11/Tarea-4/Ejercicio11.html
+++ b/Ejercicio-11/Tarea-4/Ejercicio11.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Mapa dinamico" />
-    <meta name="keywords" content="mapa dinamico" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Mapa dinamico" >
+    <meta name="keywords" content="mapa dinamico" >
     <title>Mapa Dinámico Google</title>
-    <link href="Ejercicio11.css" rel="stylesheet"/>
+    <link href="Ejercicio11.css" rel="stylesheet">
 </head>
 <body>
     <h1>Mapa dinamico</h1>
