--- a/Ejercicio-11/Tarea-5/Ejercicio11.html
+++ b/Ejercicio-11/Tarea-5/Ejercicio11.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Crear un mapa dinámico con Google Maps indicando la posición del usuario" />
-    <meta name="keywords" content="mapa, dinamico" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Crear un mapa dinámico con Google Maps indicando la posición del usuario" >
+    <meta name="keywords" content="mapa, dinamico" >
     <title>Geolocalización</title>
-    <link href="Ejercicio11.css" rel="stylesheet"/>
+    <link href="Ejercicio11.css" rel="stylesheet">
     <script src="Ejercicio11.js"></script>
 </head>
 <body>
