--- a/Ejercicio-11/Tarea-6/Ejercicio11.html
+++ b/Ejercicio-11/Tarea-6/Ejercicio11.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Aplicacion de busqueda de ciudad, la cual muestra el mapa de la misma, asi como informacion." />
-    <meta name="keywords" content="mapa, dinamico" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Aplicacion de busqueda de ciudad, la cual muestra el mapa de la misma, asi como informacion." >
+    <meta name="keywords" content="mapa, dinamico" >
     <title>Desarrollo con varias APIs</title>
-    <link href="Ejercicio11.css" rel="stylesheet"/>
+    <link href="Ejercicio11.css" rel="stylesheet">
     <script src="Ejercicio11.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -23,6 +23,7 @@
         <input type="submit" onclick="loader.consultarCiudad();" value="Buscar"/>
     </p>
     <section>
+	<h2>Informacion</h2>
     </section>
 </body>
 </html>
