--- a/Ejercicio-11/Tarea-6/Ejercicio11.html
+++ b/Ejercicio-11/Tarea-6/Ejercicio11.html
@@ -19,7 +19,7 @@
     <p>La informacion se mostrara a continuacion junto con el clima de hoy</p>
     <p>
         <label for="ciudad">Ubicacion:</label>
-        <input type="text" name="ciudad"/>
+        <input type="text" name="ciudad" id="ciudad"/>
         <input type="submit" onclick="loader.consultarCiudad();" value="Buscar"/>
     </p>
     <section>
