--- a/Ejercicio-12/Ejercicio12.html
+++ b/Ejercicio-12/Ejercicio12.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Obtener datos del archivo seleccionado" />
-    <meta name="keywords" content="mapa, dinamico" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Obtener datos del archivo seleccionado" >
+    <meta name="keywords" content="mapa, dinamico" >
     <title>Carga de archivos</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link href="Ejercicio12.css" rel="stylesheet"/>
+    <link href="Ejercicio12.css" rel="stylesheet">
     <script src="Ejercicio12.js"></script>
     <script>lector.compruebaCompatibilidad()</script>
 </head>
