--- a/Ejercicio-13/Tarea2/MapaGeoJSON.html
+++ b/Ejercicio-13/Tarea2/MapaGeoJSON.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Obtener datos del archivo seleccionado" />
-    <meta name="keywords" content="mapa, dinamico" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Obtener datos del archivo seleccionado" >
+    <meta name="keywords" content="mapa, dinamico" >
     <title>Carga de archivos Kml</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link href="MapaGeoJSON.css" rel="stylesheet"/>
+    <link href="MapaGeoJSON.css" rel="stylesheet">
     <script src="MapaGeoJSON.js"></script>
 </head>
 <body>
@@ -15,6 +15,7 @@
     <main></main>
     <h1>Geolocalizacion de un archivo kml</h1>
     <p>Obtenemos los datos del archivo seleccionado acontinuacion.</p>
-    <input type="file" onchange="lector.leerArchivoKML(this.files)">
+    <label for="file">Archivo:</label>
+    <input id="file" type="file" onchange="lector.leerArchivoKML(this.files)">
 </body>
 </html>
