--- a/Ejercicio-14/Ejercicio14.html
+++ b/Ejercicio-14/Ejercicio14.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="author" content="Sergio Buenaga Gutierrez" />
-    <meta name="description" content="Obtener datos del archivo seleccionado" />
-    <meta name="keywords" content="mapa, dinamico" />
+    <meta charset="UTF-8">
+    <meta name="author" content="Sergio Buenaga Gutierrez" >
+    <meta name="description" content="Obtener datos del archivo seleccionado" >
+    <meta name="keywords" content="mapa, dinamico" >
     <title>Carga de archivos Kml</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link href="Ejercicio14.css" rel="stylesheet"/>
+    <link href="Ejercicio14.css" rel="stylesheet">
     <script src="Ejercicio14.js"></script>
     <script>lector.listener()</script>
 </head>
@@ -18,6 +18,7 @@
     ondrop="lector.drop_handler(event)" ondragover="lector.dragover_handler(event)">Geolocalizacion de un archivo kml</h1>
     <p>Obtenemos los datos del archivo seleccionado acontinuacion.Haciendo click en el titulo se obtendra en pantalla completa.
     </p>
-    <input type="file" onchange="lector.leerArchivoKML(this.files)">
+    <label for="file">Archivo:</label>
+    <input id = "file" type="file" onchange="lector.leerArchivoKML(this.files)">
 </body>
 </html>
